Add ui for teams page

--- a/zpi-assistant/src/styles.scss
+++ b/zpi-assistant/src/styles.scss
@@ -1,5 +1,5 @@
 @use "../src/app/shared/styles/variables.scss";
 
 body {
-  background-color: variables.$color-light;
+  background-color: variables.$color-darker-light;
 }
