--- a/zpi-assistant/src/app/pages/teams/teams.component.html
+++ b/zpi-assistant/src/app/pages/teams/teams.component.html
@@ -1,1 +1,15 @@
-<p>teams works!</p>
+<div>
+  <div class="row mt-3">
+    <div class="col-md-6">
+      <div style="height: 80vh">
+        <app-teams-list-panel></app-teams-list-panel>
+      </div>
+    </div>
+    <!-- <div class="col-md-5 border rounded">content</div> -->
+    <div class="col-md-2 px-0">
+      <button class="btn btn-dark btn-block my-1" id="create-team-btn">Utwórz zespół</button>
+      <button class="btn btn-dark btn-block my-1" id="join-team-btn">Dołącz do zespołu</button>
+      <button class="btn btn-success btn-block my-1" id="your-team-btn">Twój zespół</button>
+    </div>
+  </div>
+</div>
