Fix mocks and add actual displayed team highlight

--- a/zpi-assistant/src/app/pages/teams/teams-list-panel/teams-list-panel.component.html
+++ b/zpi-assistant/src/app/pages/teams/teams-list-panel/teams-list-panel.component.html
@@ -2,7 +2,12 @@
   <label class="bg-dark rounded text-light py-2 text-center sticky-top">Utworzone zespoły</label>
   <ng-container *ngIf="dataReady; else dataNotFetchedTemplate">
     <div *ngFor="let team of teams">
-      <button type="button" class="btn btn-light btn-category w-100">
+      <button
+        type="button"
+        class="btn btn-category w-100"
+        [ngClass]="teamListRowClass(team.id)"
+        (click)="actualDisplayedTeamId = team.id"
+      >
         <div class="text-left">
           <span class="mx-4 font-weight-bold">{{ team.id }}</span
           ><span>{{ team.subject | titlecase }}</span>
