--- a/zpi-assistant/src/app/shared/styles/variables.scss
+++ b/zpi-assistant/src/app/shared/styles/variables.scss
@@ -1,3 +1,4 @@
 $color-light: #f8f9fa;
-// $color-darker-light: rgb(238, 236, 236);
 $color-darker-light: #d8d8d8;
+$color-accent: #238837;
+$color-primary: #343a40;
