--- a/zpi-assistant/src/app/shared/layouts/navbar/navbar.component.html
+++ b/zpi-assistant/src/app/shared/layouts/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" style="z-index: 1021">
   <div class="container">
     <!-- ------------------------------------------- BRAND ------------------------------------------- -->
     <a class="navbar-brand" routerLink="/home">
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/home">Zespoły <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="/teams">Zespoły <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/home">Opiekunowie</a>
