--- a/zpi-assistant/src/app/shared/components/error-response/error-response.component.html
+++ b/zpi-assistant/src/app/shared/components/error-response/error-response.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column w-100 mx-auto">
   <div class="text-center w-50 mx-auto">
-    <img src="assets/images/brand-logo-gray.png" class="w-100" alt="cart-empty-image" />
+    <img src="assets/images/brand-logo-gray.png" class="w-100" alt="cart-empty-image" loading="lazy" />
   </div>
   <div class="text-center font-weight-bold pt-5 pb-2 text-danger">
     <span class="mx-auto" [style.font-size]="errorCodeFontSize">{{ errorCode }}</span>
