--- a/zpi-assistant/src/styles.scss
+++ b/zpi-assistant/src/styles.scss
@@ -4,11 +4,61 @@ body {
   background-color: variables.$color-darker-light;
   ::-moz-selection {
     color: white;
-    background: variables.$color-accent;
+    background: variables.$color-primary;
   }
 
   ::selection {
     color: white;
-    background: variables.$color-accent;
+    background: variables.$color-primary;
   }
+}
+
+/* ------------------------------------------- SIZE CLASSES ------------------------------------------- */
+.w-5 {
+  width: 5%;
+}
+.w-10 {
+  width: 10%;
+}
+.w-15 {
+  width: 15%;
+}
+.w-20 {
+  width: 20%;
+}
+.w-30 {
+  width: 30%;
+}
+.w-35 {
+  width: 35%;
+}
+.w-40 {
+  width: 40%;
+}
+.w-45 {
+  width: 45%;
+}
+.w-55 {
+  width: 55%;
+}
+.w-60 {
+  width: 60%;
+}
+.w-65 {
+  width: 65%;
+}
+.w-70 {
+  width: 70%;
+}
+.w-80 {
+  width: 80%;
+}
+.w-85 {
+  width: 85%;
+}
+.w-90 {
+  width: 90%;
+}
+.w-95 {
+  width: 30%;
 }
