--- a/zpi-assistant/src/app/shared/layouts/navbar/navbar.component.html
+++ b/zpi-assistant/src/app/shared/layouts/navbar/navbar.component.html
@@ -22,7 +22,7 @@
           <a class="nav-link" routerLink="/teachers" [routerLinkActive]="['active']">Opiekunowie</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/teams" [routerLinkActive]="['active']">Studenci</a>
+          <a class="nav-link disabled" [routerLinkActive]="['active']">Studenci</a>
         </li>
       </ul>
       <!-- ------------------------------------------- ACCOUNT ------------------------------------------- -->
