--- a/zpi-assistant/src/app/pages/teams/teams.component.html
+++ b/zpi-assistant/src/app/pages/teams/teams.component.html
@@ -1,14 +1,12 @@
-<div>
-  <div class="row mt-3">
-    <div class="col-md-6">
-      <div style="height: 75vh">
-        <app-teams-list-panel></app-teams-list-panel>
-      </div>
+<div class="row mt-3">
+  <div class="col-md-6">
+    <div class="team-list-size d-block overflow-auto">
+      <app-teams-list-panel></app-teams-list-panel>
     </div>
-    <div class="col-md-3 px-0">
-      <button class="btn btn-dark btn-block my-1" id="create-team-btn">Utwórz zespół</button>
-      <button class="btn btn-dark btn-block my-1" id="join-team-btn">Dołącz do zespołu</button>
-      <button class="btn btn-success btn-block my-1" id="your-team-btn">Twój zespół</button>
-    </div>
+  </div>
+  <div class="col-md-3 px-0">
+    <button class="btn btn-dark btn-block my-1" id="create-team-btn">Utwórz zespół</button>
+    <button class="btn btn-dark btn-block my-1" id="join-team-btn">Dołącz do zespołu</button>
+    <button class="btn btn-success btn-block my-1" id="your-team-btn">Twój zespół</button>
   </div>
 </div>
