--- a/zpi-assistant/src/app/shared/layouts/navbar/navbar.component.html
+++ b/zpi-assistant/src/app/shared/layouts/navbar/navbar.component.html
@@ -13,7 +13,7 @@
       <span class="mx-4 align-baseline text-light h5">ZPI Assistant</span>
     </a>
     <!-- ------------------------------------------- LINKS ------------------------------------------- -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" routerLink="/teams" [routerLinkActive]="['active']">Zespoły <span class="sr-only">(current)</span></a>
