Cleanup typeahead-list component, add students page

--- a/zpi-assistant/src/app/pages/students/students.component.html
+++ b/zpi-assistant/src/app/pages/students/students.component.html
@@ -1,10 +1,10 @@
 <app-typeahead-list
-  [modelsList]="teachers"
+  [modelsList]="students"
   [dataReady]="dataReady"
   [httpError]="httpError"
   [displayedFieldsFromModel]="displayedFieldsInList"
   [fieldsFromModelUsedInFilter]="fieldsUsedInFilter"
-  [inputPromptText]="'Wyszukaj opiekuna:'"
-  [inputPlaceholderText]="'Wpisz imię / nazwisko'"
+  [inputPromptText]="'Wyszukaj studenta:'"
+  [inputPlaceholderText]="'Wpisz imię / nazwisko / numer albumu '"
 >
 </app-typeahead-list>
