--- a/zpi-assistant/src/app/pages/teams/teams.component.html
+++ b/zpi-assistant/src/app/pages/teams/teams.component.html
@@ -5,8 +5,17 @@
     </div>
   </div>
   <div class="col-md-3 px-0">
-    <button class="btn btn-dark btn-block my-1" id="create-team-btn">Utwórz zespół</button>
+    <button class="btn btn-dark btn-block my-1" id="create-team-btn" (click)="onCreateTeamClick(teamCreationSuccess)">
+      Utwórz zespół
+    </button>
     <button class="btn btn-dark btn-block my-1" id="join-team-btn">Dołącz do zespołu</button>
     <button class="btn btn-success btn-block my-1" id="your-team-btn">Twój zespół</button>
   </div>
 </div>
+
+<!-- ------------------------------------------- MODAL TEMPLATES ------------------------------------------- -->
+<ng-template #teamCreationSuccess>
+  <app-modal-response type="success" headerText="Pomyślnie utworzono zespół" [textLines]="teamCreationSuccessTextLines">
+    <button class="btn btn-sm btn-outline-success w-25 mt-3" (click)="modalRef.hide()">OK</button>
+  </app-modal-response>
+</ng-template>
