Add your-tema comnent

--- a/zpi-assistant/src/app/pages/teams/teams.component.html
+++ b/zpi-assistant/src/app/pages/teams/teams.component.html
@@ -9,7 +9,7 @@
       Utwórz zespół
     </button>
     <button class="btn btn-dark btn-block my-1" id="join-team-btn">Dołącz do zespołu</button>
-    <button class="btn btn-success btn-block my-1" id="your-team-btn">Twój zespół</button>
+    <button class="btn btn-success btn-block my-1" id="your-team-btn" routerLink="/teams/your-team">Twój zespół</button>
   </div>
 </div>
 
