--- a/zpi-assistant/src/app/pages/teams/teams.component.html
+++ b/zpi-assistant/src/app/pages/teams/teams.component.html
@@ -1,5 +1,5 @@
 <div class="row mt-3">
-  <div class="col-md-6">
+  <div class="col">
     <div class="team-list-size d-block overflow-auto">
       <app-teams-list-panel></app-teams-list-panel>
     </div>
