--- a/zpi-assistant/src/app/pages/teams/teams.component.html
+++ b/zpi-assistant/src/app/pages/teams/teams.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-3">
   <div class="col">
     <div class="team-list-size d-block overflow-auto">
-      <app-teams-list-panel></app-teams-list-panel>
+      <app-teams-list-panel #teamListPanelTemplate></app-teams-list-panel>
     </div>
   </div>
   <div class="col-md-3 px-0">
