--- a/zpi-assistant/src/app/pages/mailbox/mailbox.component.html
+++ b/zpi-assistant/src/app/pages/mailbox/mailbox.component.html
@@ -1,50 +1,100 @@
 <div class="row">
-  <!-- ------------------------------------------- MAIL CONTENT ------------------------------------------- -->
-  <div class="w-50">
-    <div class="w-100 my-4 card">
-      <div class="d-flex flex-column card-body">
-        <!-- ----------------------- From ---------------------- -->
-        <div class="input-group">
-          <div class="input-group-prepend w-15">
-            <div class="input-group-text bg-dark text-light w-100">
-              <span class="w-100 font-weight-bold">Od</span>
+  <ng-container *ngIf="dataReady; else dataNotYetFetchedTemplate">
+    <ng-container *ngIf="mails.length > 0; else notFoundEmailsTemplate">
+      <!-- ------------------------------------------- MAIL CONTENT ------------------------------------------- -->
+      <div class="w-50">
+        <div class="w-100 my-4 card">
+          <div class="d-flex flex-column card-body">
+            <!-- ----------------------- From ---------------------- -->
+            <div class="input-group">
+              <div class="input-group-prepend w-15">
+                <div class="input-group-text bg-dark text-light w-100">
+                  <span class="w-100 font-weight-bold">Od</span>
+                </div>
+              </div>
+              <input type="text" class="form-control" [value]="actualDisplayedMsg.from" disabled />
+            </div>
+            <!-- ----------------------- To ---------------------- -->
+            <div class="input-group">
+              <div class="input-group-prepend w-15">
+                <div class="input-group-text bg-dark text-light w-100">
+                  <span class="w-100 font-weight-bold"> Do </span>
+                </div>
+              </div>
+              <input type="text" class="form-control" [value]="actualDisplayedMsg.to" disabled />
+            </div>
+            <!-- ----------------------- Temat ---------------------- -->
+            <div class="input-group">
+              <div class="input-group-prepend w-15">
+                <div class="input-group-text bg-dark text-light w-100">
+                  <span class="w-100 font-weight-bold"> Temat </span>
+                </div>
+              </div>
+              <input type="text" class="form-control" [value]="actualDisplayedMsg.subject" disabled />
             </div>
           </div>
-          <input type="text" class="form-control" value="Powiadomienia-Systemowe-ZPI" disabled />
         </div>
-        <!-- ----------------------- Tu ---------------------- -->
-        <div class="input-group">
-          <div class="input-group-prepend w-15">
-            <div class="input-group-text bg-dark text-light w-100">
-              <span class="w-100 font-weight-bold"> Do </span>
+        <!-- ----------------------- Message ---------------------- -->
+        <div class="w-100 my-4 card">
+          <div class="card-body">
+            <div *ngFor="let msg of actualDisplayedMsg.msgLines" class="row mx-0" style="min-height: 20px">
+              {{ msg }}
             </div>
           </div>
-          <input type="text" class="form-control" value="grzegorz.zając@pwr.edu.pl" disabled />
-        </div>
-        <!-- ----------------------- Temat ---------------------- -->
-        <div class="input-group">
-          <div class="input-group-prepend w-15">
-            <div class="input-group-text bg-dark text-light w-100">
-              <span class="w-100 font-weight-bold"> Temat </span>
-            </div>
+          <!-- ----------------------- Buttons ---------------------- -->
+          <div class="card-body btn-group">
+            <ng-container *ngIf="actualDisplayedMsgIsInvitation; else sendMessageBtn">
+              <button class="btn btn-danger">Odrzuć zaproszenie</button>
+              <button class="btn btn-success">Akceptuj zaproszenie</button>
+            </ng-container>
+            <ng-template #sendMessageBtn>
+              <button class="btn btn-secondary">Wyślij wiadomość</button>
+            </ng-template>
           </div>
-          <input type="text" class="form-control" value="[Z03] Powiadomienie" disabled />
         </div>
       </div>
-    </div>
-    <!-- ----------------------- Message ---------------------- -->
-    <div class="w-100 my-4 card">
-      <div class="card-body">content</div>
-      <div class="card-body btn-group">
-        <button class="btn btn-danger">Odrzuć zaproszenie</button>
-        <button class="btn btn-success">Akceptuj zaproszenie</button>
+      <!-- ----------------------- LIST OF MAILS ---------------------- -->
+      <div class="w-50">
+        <div class="card w-100 my-4">
+          <div class="d-flex flex-column card-body">
+            <div class="btn btn-outline-secondary" *ngFor="let message of mails" (click)="actualDisplayedMsg = message">
+              <div class="row mx-0">
+                <div class="col-md-5 text-center font-weight-bold">{{ message.from }}:</div>
+                <div class="col text-truncate">{{ message.subject }}</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-  <!-- ----------------------- LIST OF MAILS ---------------------- -->
-  <div class="w-50">
-    <div class="card w-100 my-4">
-      <div class="d-flex flex-column card-body">Content</div>
-    </div>
-  </div>
+    </ng-container>
+  </ng-container>
 </div>
+
+<!-- ------------------------------------------- TEMPLATES ------------------------------------------- -->
+<ng-template #dataNotYetFetchedTemplate>
+  <ng-container *ngIf="httpError !== undefined; else dataLoadingTemplate">
+    <div class="align-items-center d-flex w-50 mx-auto my-5">
+      <div class="mx-auto w-75">
+        <app-error-response
+          [errorCode]="httpError.statusCode"
+          [errorText]="httpError.msg"
+          errorCodeFontSize="3em"
+          errorTextFontSize="1em"
+        >
+        </app-error-response>
+      </div>
+    </div>
+  </ng-container>
+</ng-template>
+
+<ng-template #dataLoadingTemplate>
+  <div class="align-items-center d-flex w-50 mx-auto my-5">
+    <div class="mx-auto w-75">
+      <app-data-loading text="Loading data"></app-data-loading>
+    </div>
+  </div>
+</ng-template>
+
+<ng-template #notFoundEmailsTemplate>
+  <div class="alert alert-secondary w-100 border border-secondary text-center my-2 font-weight-bold">Your mailbox is empty</div>
+</ng-template>
