--- a/zpi-assistant/src/app/pages/students/students.component.html
+++ b/zpi-assistant/src/app/pages/students/students.component.html
@@ -6,5 +6,7 @@
   [fieldsFromModelUsedInFilter]="fieldsUsedInFilter"
   [inputPromptText]="'Wyszukaj studenta:'"
   [inputPlaceholderText]="'Wpisz imię / nazwisko / numer albumu '"
+  [addBtnVisible]="addBtnVisible"
+  [msgBtnVisible]="msgBtnVisible"
 >
 </app-typeahead-list>
