--- a/zpi-assistant/src/app/pages/teachers/teachers.component.html
+++ b/zpi-assistant/src/app/pages/teachers/teachers.component.html
@@ -6,5 +6,7 @@
   [fieldsFromModelUsedInFilter]="fieldsUsedInFilter"
   [inputPromptText]="'Wyszukaj opiekuna:'"
   [inputPlaceholderText]="'Wpisz imię / nazwisko'"
+  [addBtnVisible]="addBtnVisible"
+  [msgBtnVisible]="msgBtnVisible"
 >
 </app-typeahead-list>
