--- a/zpi-assistant/src/app/shared/layouts/navbar/navbar.component.html
+++ b/zpi-assistant/src/app/shared/layouts/navbar/navbar.component.html
@@ -30,7 +30,7 @@
       <div *ngIf="isLogged; else signInTemplate" class="btn-group" role="group">
         <button class="btn btn-outline-light d-flex align-items-center" routerLink="/mailbox">
           <span class="material-icons"> email </span>
-          <span class="badge badge-danger">4</span>
+          <span *ngIf="unreadMsgQty > 0" class="badge badge-danger">{{ unreadMsgQty }}</span>
         </button>
         <div class="btn-group" dropdown #accountDropdown="bs-dropdown" [autoClose]="true">
           <button
@@ -47,10 +47,10 @@
             <li role="menuitem"><a class="dropdown-item" href="#">246703</a></li>
           </ul>
         </div>
-        <button class="btn btn-outline-danger" (click)="isLogged = false">Sign out</button>
+        <button class="btn btn-outline-danger" (click)="logoutUser()">Sign out</button>
       </div>
       <!-- ----------------------- NOT LOGGED ---------------------- -->
-      <ng-template #signInTemplate> <button class="btn btn-outline-success" (click)="isLogged = true">Sign in</button> </ng-template>
+      <ng-template #signInTemplate> <button class="btn btn-outline-success" (click)="logonUser()">Sign in</button> </ng-template>
     </div>
   </div>
 </nav>
